<resources>
    <string name="app_name">LovooCloneApp</string>
    <string name="finding">Yes, finding someone special
        sometimes feels like a roller
        coaster ride.
    </string>
    <string name="what_are_really_looking">What are you really looking for?</string>
    <string name="something_serious">Something serious</string>
    <string name="new_friends">New friends or chats</string>
    <string name="somethig_casual">Something casual</string>
    <string name="text_Lovoo">LOVOO</string>
    <string name="text_Meet">Meet. Great. Heartbeat.</string>
    <string name="text_Continue_with_Google">Continue With Google</string>
    <string name="Chats">Chats</string>
    <string name="chat">chats</string>
    <string name="lovoTeam">Praveen,21</string>
    <string name="how_to_fill">How to fill your inbox</string>
    <string name="send_icebreak">Send icebreakers</string>
    <string name="be_active">Be active</string>
    <string name="play_match">Play Match now</string>
    <string name="give_out">Give out of likes</string>
    <string name="get_premium">Get Premium now</string>
    <string name="news">News</string>
    <string name="credits">CREDITS</string>
    <string name="likes">Likes</string>
    <string name="glances">Glances</string>
    <string name="when_you_are_birthday">When you are birthday?</string>
    <string name="morechance">More chance of getting a like</string>
    <string name="complete">Complete your profile</string>
    <string name="smile">Smile in your profile photo</string>
    <string name="more_likes">More likes</string>
    <string name="manish">Manish 21</string>

    <string name="birthday">When is your birthday?</string>
    <string name="hint_year">YYYY</string>
    <string name="when_is_party">So,when is the party?</string>
    <string name="date">DD</string>
    <string name="month">MM</string>

    <string name="hyderabad">Hyderabad</string>




</resources>