<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backdround"
    tools:context=".fifthActivity">

    <TextView
        android:id="@+id/tvwhatAreYouLooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_are_really_looking"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:textSize="@dimen/dp_25"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="103dp" />

    <Button
        android:id="@+id/tvSomething"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_30dp"
        android:background="@drawable/fifth_rectangle"
        android:text="@string/something_serious"
        android:layout_marginStart="@dimen/dp_25"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvwhatAreYouLooking"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/dp_20"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"

        />
    <Button
        android:id="@+id/tvnewfriends"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/fifth_rectangle"
        android:text="@string/new_friends"
        android:textSize="24dp"

        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tvSomething"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_25"
     />
    <Button
        android:id="@+id/tvletsSeeWhatHappen"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/fifth_rectangle_white"
        android:text="Let's see what happens"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvnewfriends"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/dp_25"


        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/tvsomethin_casual"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/fifth_rectangle"
        android:text="@string/somethig_casual"
        android:textSize="24dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tvletsSeeWhatHappen"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_25"

        />


</androidx.constraintlayout.widget.ConstraintLayout>