<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newsActivity">
    <TextView
        android:id="@+id/tvchats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_22"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/news"  
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tvarrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:drawableStart="@drawable/ic_baseline_arrow_back_ios_new_24_sk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvcredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_20"
        android:textColor="@color/black"
        android:text="@string/credits"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvlikes"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvarrao"
        android:layout_marginTop="@dimen/dp_50"
        android:textSize="@dimen/dp_25"
        android:layout_marginStart="@dimen/dp_50"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/likes"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvlikes"
        android:background="@color/navy_blue"
        android:layout_height="@dimen/dp_3"/>
    <TextView
        android:id="@+id/tvglances"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvarrao"
        android:layout_marginTop="@dimen/dp_50"
        android:textSize="@dimen/dp_25"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dp_50"
        android:text="@string/glances"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/tvheart_square"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvlikes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@drawable/ic_heart_in_square"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvmorechances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morechance"
        android:textSize="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvheart_square"
        />
    <TextView
        android:id="@+id/tvcompleteyourprofile"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvmorechances"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_20"
        android:textColor="#696969"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/complete"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvsmileInProfile"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvcompleteyourprofile"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_20"
        android:textStyle="bold"
          android:textColor="#696969"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/smile"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvbeActive"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvsmileInProfile"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_20"
        android:textStyle="bold"
          android:textColor="#696969"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/be_active"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvplayMatch"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvbeActive"
        app:layout_constraintBottom_toTopOf="@id/btnGetPremium"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_22"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_25"
        android:textColor="@color/navy_blue"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/play_match"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnGetPremium"
        android:layout_width="160dp"
        app:layout_constraintTop_toBottomOf="@+id/tvplayMatch"
        app:layout_constraintBottom_toTopOf="@id/tvNearbyIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle"
        android:textSize="@dimen/dp_15"
        android:drawableStart="@drawable/ic_start_up"
        android:layout_marginTop="60dp"
        android:padding="@dimen/dp_10"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/more_likes"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvNearbyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLiveIcon"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLiveIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMatchIcon"
        app:layout_constraintStart_toEndOf="@id/tvNearbyIcon" />

    <TextView
        android:id="@+id/tvMatchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_playing_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvChatsIcon"
        app:layout_constraintStart_toEndOf="@id/tvLiveIcon" />

    <TextView
        android:id="@+id/tvChatsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNewsIcon"
        app:layout_constraintStart_toEndOf="@id/tvMatchIcon" />

    <TextView
        android:id="@+id/tvNewsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_blue_news_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvChatsIcon" />

    <TextView
        android:id="@+id/tvNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Nearby"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNearbyIcon" />

    <TextView
        android:id="@+id/tvLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Live"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMatch"
        app:layout_constraintStart_toEndOf="@id/tvNearby"
        app:layout_constraintTop_toBottomOf="@id/tvLiveIcon" />

    <TextView
        android:id="@+id/tvMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Match"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvChats"
        app:layout_constraintStart_toEndOf="@id/tvLive"
        app:layout_constraintTop_toBottomOf="@id/tvMatchIcon" />

    <TextView
        android:id="@+id/tvChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Chats"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNews"
        app:layout_constraintStart_toEndOf="@id/tvMatch"
        app:layout_constraintTop_toBottomOf="@id/tvChatsIcon" />

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="News"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvChats"
        app:layout_constraintTop_toBottomOf="@id/tvNewsIcon" />





</androidx.constraintlayout.widget.ConstraintLayout>