<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/tvchats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_20"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/Chats"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
        android:layout_width="wrap_content"
        android:drawableStart="@drawable/ic_baseline_arrow_back_ios_new_24_sk"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvchat"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_25"
        android:text="@string/chat"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_25"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvchats"
        android:layout_height="wrap_content"
/>
    <ImageView
        android:id="@+id/ivmeets"
        android:layout_width="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        android:layout_marginStart="@dimen/dp_25"
        android:src="@drawable/profile_02"
        app:layout_constraintTop_toBottomOf="@+id/tvchat"
        android:layout_height="@dimen/dp_50"/>
    <TextView
        android:id="@+id/tvline"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/ivmeets"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/gray"
        android:layout_height="@dimen/dp_1"/>

    <TextView
        android:id="@+id/tv_lovoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/lovoTeam"
        app:layout_constraintTop_toBottomOf="@id/tvchat"
        android:layout_marginStart="@dimen/dp_15"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivmeets"
        />

    <TextView
        android:id="@+id/were_really"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We're really glad to have you with us,.."
        android:textColor="@color/black"
        android:textSize="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@+id/tv_lovoo"
        app:layout_constraintStart_toEndOf="@+id/ivmeets"
        android:layout_marginStart="@dimen/dp_15"
        />
    <ImageView
        android:id="@+id/ivmeets2"
        android:layout_width="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_15"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_25"
        android:src="@drawable/profile_01"
        app:layout_constraintTop_toBottomOf="@+id/ivmeets"
        android:layout_height="@dimen/dp_50"/>
    <TextView
        android:id="@+id/tvline2"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        app:layout_constraintTop_toBottomOf="@+id/ivmeets2"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/tv_lovoo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/manish"
        app:layout_constraintTop_toBottomOf="@id/tvline"
        android:layout_marginStart="@dimen/dp_15"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivmeets"
        />
    <TextView
        android:id="@+id/were_really2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We're really glad to have you with us,.."
        android:textColor="@color/black"
        android:textSize="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@+id/tv_lovoo2"
        app:layout_constraintStart_toEndOf="@+id/ivmeets"
        android:layout_marginStart="@dimen/dp_15"
        />


    <TextView
        android:id="@+id/tvhow_to_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_fill"
        android:textSize="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintBottom_toTopOf="@id/tvgive_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvline2"

         />
    <TextView
        android:id="@+id/tvgive_out"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvhow_to_fill"
        app:layout_constraintBottom_toTopOf="@id/tvsendice"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/give_out"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvsendice"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvgive_out"
        app:layout_constraintBottom_toTopOf="@id/tvbeActive"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/send_icebreak"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvbeActive"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvsendice"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/be_active"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvplayMatch"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvbeActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGetPremium"
        android:textSize="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/navy_blue"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/play_match"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnGetPremium"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvbeActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvNearbyIcon"
        android:background="@drawable/chatbutton"
        android:textSize="@dimen/dp_15"
        android:padding="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/play_match"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvNearbyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLiveIcon"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLiveIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMatchIcon"
        app:layout_constraintStart_toEndOf="@id/tvNearbyIcon" />

    <TextView
        android:id="@+id/tvMatchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_playing_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvChatsIcon"
        app:layout_constraintStart_toEndOf="@id/tvLiveIcon" />

    <TextView
        android:id="@+id/tvChatsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_baseline_airplay_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNewsIcon"
        app:layout_constraintStart_toEndOf="@id/tvMatchIcon" />

    <TextView
        android:id="@+id/tvNewsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:drawableStart="@drawable/ic_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvChatsIcon" />

    <TextView
        android:id="@+id/tvNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Nearby"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNearbyIcon" />

    <TextView
        android:id="@+id/tvLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Live"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMatch"
        app:layout_constraintStart_toEndOf="@id/tvNearby"
        app:layout_constraintTop_toBottomOf="@id/tvLiveIcon" />

    <TextView
        android:id="@+id/tvMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Match"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvChats"
        app:layout_constraintStart_toEndOf="@id/tvLive"
        app:layout_constraintTop_toBottomOf="@id/tvMatchIcon" />

    <TextView
        android:id="@+id/tvChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="Chats"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNews"
        app:layout_constraintStart_toEndOf="@id/tvMatch"
        app:layout_constraintTop_toBottomOf="@id/tvChatsIcon" />

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="News"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvChats"
        app:layout_constraintTop_toBottomOf="@id/tvNewsIcon" />



</androidx.constraintlayout.widget.ConstraintLayout>